force-app/main/default/objects/geopointe__GP_User_Settings__c/geopointe__GP_User_Settings__c.object-meta.xml
<CustomObject>
    <label>Geopointe User Settings</label>
    <nameField>
        <label>Geopointe_User_Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>