force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Auto_Load_Data_Sets__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Auto_Load_Data_Sets__c</fullName>
    <label>Auto Load Data Sets</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>