force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Auto_Load_Migration_Complete__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Auto_Load_Migration_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set when starred map items have been recoded as Auto_Load_Map_Items__c</inlineHelpText>
    <label>Auto Load Migration Complete</label>
    <type>Checkbox</type>
</CustomField>