force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Custom_Google_Maps_URL__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Custom_Google_Maps_URL__c</fullName>
    <inlineHelpText>Used to define loading of a custom Google Maps URL.</inlineHelpText>
    <label>Custom Google Maps URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>