force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Default_Calendar_Duration__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Default_Calendar_Duration__c</fullName>
    <inlineHelpText>The default item duration for the calendar</inlineHelpText>
    <label>Default Calendar Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>