force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Default_Calendar_View__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Default_Calendar_View__c</fullName>
    <inlineHelpText>The default starting view for the calendar</inlineHelpText>
    <label>Default Calendar View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>