force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Default_Route_Optimization_Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Default_Route_Optimization_Type__c</fullName>
    <label>Default Optimization Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distance</fullName>
                <default>true</default>
                <label>Distance</label>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>