force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Default_Route_Stop_Duration__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Default_Route_Stop_Duration__c</fullName>
    <inlineHelpText>Default duration in minutes for a route stop. This may be overriden by system configuration.</inlineHelpText>
    <label>Default Stop Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>