force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Default_Route_Window_Stop__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Default_Route_Window_Stop__c</fullName>
    <inlineHelpText>Default route window start time. This may be changed on the route.</inlineHelpText>
    <label>Default Route Window End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>