force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Distance_Unit__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Distance_Unit__c</fullName>
    <defaultValue>&quot;mi&quot;</defaultValue>
    <inlineHelpText>The unit used (&apos;miles&apos; or &apos;kilometers&apos;) to express size or distance. This setting is kept for each user.</inlineHelpText>
    <label>Distance Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>