force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Favorite_Map_Items__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Favorite_Map_Items__c</fullName>
    <label>Favorite Map Items</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>