force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Global_Business_Monthly_Limit__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Global_Business_Monthly_Limit__c</fullName>
    <label>Business/Contact Monthly Import Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>