force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Hide_Data_Table__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Hide_Data_Table__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will hide the Data Table on the map for the User.</description>
    <inlineHelpText>If checked, will hide the Data Table on the map for the User.</inlineHelpText>
    <label>Hide Data Table</label>
    <type>Checkbox</type>
</CustomField>