force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__License_Route_Planner__c.field-meta.xml
<CustomField>
    <fullName>geopointe__License_Route_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Route Planner License</label>
    <type>Checkbox</type>
</CustomField>