force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Mobile_UI_Preference__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Mobile_UI_Preference__c</fullName>
    <description>This setting determines the default UI to load on iPad.</description>
    <inlineHelpText>This setting determines the default UI to load on iPad.</inlineHelpText>
    <label>Mobile UI Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Mobile Optimized</fullName>
                <default>true</default>
                <label>Mobile Optimized</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>