force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Route_Start_Location__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Route_Start_Location__c</fullName>
    <inlineHelpText>When set to &apos;currentLocation&apos;, appends Current Location (if available) to start of Route</inlineHelpText>
    <label>Start Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>