force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Show_Selected_Records__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Show_Selected_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will show the selected records for the selected shapes when using the Multi Shape Editor for the User.</description>
    <inlineHelpText>If checked, will show the selected records for the selected shapes when using the Multi Shape Editor for the User.</inlineHelpText>
    <label>Show Selected Records in Shape Editor</label>
    <type>Checkbox</type>
</CustomField>