force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Start_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Start_Location_Name__c</fullName>
    <label>Start Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>