force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Sunday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Sunday_Start_Time__c</fullName>
    <label>Sunday Start Time</label>
    <type>Time</type>
</CustomField>