force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Temperature_Unit__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Temperature_Unit__c</fullName>
    <defaultValue>&quot;f&quot;</defaultValue>
    <inlineHelpText>The unit used (f or c) to measure temperature. This setting is kept for each user.</inlineHelpText>
    <label>Temperature Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>