force-app/main/default/objects/geopointe__GP_User_Settings__c/fields/geopointe__Wednesday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Wednesday_End_Time__c</fullName>
    <label>Wednesday End Time</label>
    <type>Time</type>
</CustomField>